feat: 스마트 체크인, 건강 일지, 이웃 돌봄 기능 추가 및 Traefik 라우팅 통합
3개 신규 기능 전체 구현 (기획/디자인/백엔드/프론트엔드/QA):
- FEAT-002: 스마트 체크인 알림 - 4단계 에스컬레이션, 30분 주기 모니터링
- FEAT-003: 이웃 돌봄 매칭 - 위치 기반 자원봉사자 매칭, 신뢰도 점수
- FEAT-004: 건강 일지 & 감정 추적 - 기분/수면/식사/운동 기록, 건강 점수 알고리즘

인프라 개선:
- Traefik 리버스 프록시 추가 (포트 80 단일 진입점)
- 백엔드 3개 서비스 Dockerfile 생성 (multi-stage build)
- Admin API 경로 /api/admin/* 으로 통일
- DB 마이그레이션 스크립트 추가 (7 테이블, 15 인덱스)
- Kafka 토픽 6개 추가 (escalation, anomaly, health, care)

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>